# rosie

./: .gitignore
rosie_bringup/: CMakeLists.txt  package.xml
rosie_bringup/config/: gui.config
rosie_bringup/launch/: rosie_sim_bothcontrol.launch.py  rosie_sim_control.launch.py
rosie_bringup/scripts/: dual_motion_planning_python_api_tutorial.py
rosie_bringup/worlds/: rosie_world.sdf  rosie_worldold.sdf
rosie_description/: CMakeLists.txt  package.xml
rosie_description/config/: joint_limits_nu.yaml  left_sim_initial_joint_positions.yaml  ros2_controllers.yaml
rosie_description/launch/: rosie_rviz.launch.py  rosie_urdf.launch.py
rosie_description/meshes/rosie/: rosie_collision.dae  rosie_collision_mod.dae
rosie_description/rviz/: rviz_config.rviz
rosie_description/urdf/: dual_arms.xacro  fl_castor.xacro  fl_wheel.xacro  fr_castor.xacro  fr_wheel.xacro  multi_arms.xacro  one_arm.xacro  rl_castor.xacro  rl_wheel.xacro  rosie.urdf.xacro  rosie_arms.xacro  rosie_gazebo.urdf.xacro  rosie_nav.urdf.xacro  rosie_nobody.urdf.xacro  rosie_old.urdf.xacro  rr_castor.xacro  rr_wheel.xacro  tracer.xacro  tracer_v1.xacro  tracer_wheel_1.xacro  tracer_wheel_2.xacro  zed_descr.xacro  zed_macro.xacro
rosie_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rosie_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ompl_planning_jazzy.yaml  ros2_controllers.yaml  rosie.srdf  rosie_cont_isaacsim.urdf  rosie_rev_isaacsim.urdf
rosie_moveit_config/config/rosie/: rosie.usd
rosie_moveit_config/config/rosie/configuration/: rosie_physics.usd  rosie_sensor.usd
rosie_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rosie.launch.py  rosie_move_group.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
rosie_moveit_cpp_demos/: CMakeLists.txt  package.xml
rosie_moveit_cpp_demos/launch/: dual_arms_planner_movegroup.launch.py  rosie_motion_planning_api_tutorial.launch.py
rosie_moveit_cpp_demos/src/: dual_arms_planner_movegroup.cpp  dual_arms_planner_movegroup_launch.cpp  dual_arms_planner_moveitcpp.cpp  rosie_motion_planning_api_tutorial.cpp
